log/build_2024-07-25_14-57-09/py_proj/stderr.log
  File "/home/sunny/ros2_ws/install/py_proj/lib/python3.10/site-packages/py_proj/proj_coordinate.py", line 6
    from ros2_ws/src/custom_interfaces.msg import Utm
                ^
SyntaxError: invalid syntax

